Upload pytest logs as artifact for CI traceability

--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -12,20 +12,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install fastapi uvicorn pytest httpx
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install fastapi uvicorn pytest httpx
 
-    - name: Run tests
-      run: |
-        PYTHONPATH=. pytest tests/
+      - name: Run tests and generate log
+        run: |
+          mkdir -p test-reports
+          PYTHONPATH=. pytest -v > test-reports/results.log
 
+      - name: Upload pytest log as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report
+          path: test-reports/results.log
